--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ API_URL="https://api.uptimerobot.com/v2/"
 # UptimeRobot Api Keys - required
 ## This project only requires Read-only API key
 ## https://dashboard.uptimerobot.com/integrations
-API_KEY=""
+API_KEY="u2251896-1a9968d93ad48619233d1c13"
 
 # Deployment platform - required
 ## cloudflare ( default ) | auto
@@ -14,7 +14,7 @@ API_KEY=""
 DEPLOYMENT_PLATFORM="cloudflare"
 
 # Site Title
-SITE_TITLE="IMSYY 站点监测"
+SITE_TITLE="Nianshu 站点监测"
 
 # Site Description 
 SITE_DESCRIPTION="一个简约的站点监测 | a simple site-status pages, power by uptimerobot"
@@ -28,7 +28,7 @@ SITE_LOGO="/favicon.ico"
 # ICP Filing
 ## In China, you need to provide an ICP (Internet Content Provider) filing number.
 ## https://beian.miit.gov.cn/
-SITE_ICP=""
+SITE_ICP="陇ICP备2023001612号-1"
 
 # Count Days
 ## The number of days to count
@@ -41,6 +41,6 @@ SHOW_LINKS=true
 
 # Password
 ## If you want to protect the data, you can set a password
-SITE_PASSWORD=""
+SITE_PASSWORD="Qwer1234"
 ## Key used for jwt verification, required
 SITE_SECRE_KEY="site-status"
